Fix clipping on some images

--- a/web/app/themes/tob-organized-q-theme/resources/assets/styles/layouts/_pages.scss
+++ b/web/app/themes/tob-organized-q-theme/resources/assets/styles/layouts/_pages.scss
@@ -57,6 +57,15 @@
 	}
 }
 
+.front-page-section-img-noclip {
+	@screen md {
+		width: 796px;
+		height: 490px ;
+		object-fit: cover;
+		object-position: bottom;
+		filter: drop-shadow(0px 0px 20px #FAECEB);
+	}
+}
 .front-page-section-img {
 	@screen md {
 		width: 796px;
